# grovestark

./: BENCHMARKING.md  Cargo.toml  LICENSE  MASTERNODE_OWNERSHIP_CIRCUIT.md  README.md  ROADMAP.md  TESTING.md
.cargo/: config.toml
benches/: comprehensive_benchmarks.rs  quick_benchmarks.rs
docs/: DEVELOPMENT.md  GROVEDB_PROOFS.md  STACK.md  TECH_OVERVIEW.md  WITNESS_AND_PUBLIC_INPUTS.md
examples/: eddsa_proof_demo.rs  proof_demo.rs  sdk_integration.rs  simple_proof.rs
src/: ed25519_helpers.rs  error.rs  error_handling.rs  field.rs  layout.rs  lib.rs  stark_winterfell.rs  stark_winterfell_trace.rs  test_utils.rs  types.rs
src/air/: identity_constraints.rs  mod.rs
src/circuits/: mod.rs
src/crypto/: blake3_constraints.rs  blake3_field.rs  blake3_lookup.rs  blake3_ops.rs  constant_time.rs  ed25519_integration.rs  ed25519_scalar.rs  edwards_arithmetic.rs  fe25519_digits.rs  field_conversion.rs  hybrid_verification.rs  identity_commitments.rs  merkle.rs  mod.rs  point_decompression.rs  ring_signature.rs  scalar_mult.rs  scalar_mult_correct.rs  sqrt_ratio.rs
src/crypto/ed25519/: decompress.rs  mod.rs
src/parser/: grovedb_executor.rs  mod.rs  proof_decoder.rs  proof_extractor.rs
src/phases/: mod.rs
src/phases/blake3/: constraints.rs  mod.rs  trace.rs
src/phases/eddsa/: aux_trace.rs  constraints.rs  mod.rs  scalar_range.rs  trace.rs  witness_augmentation.rs
src/phases/grovevm/: blake3_integration.rs  constraints.rs  mod.rs  proof_parser.rs  range_check.rs  trace.rs  types.rs
src/phases/merkle/: constraints.rs  mod.rs  trace.rs
src/prover/: commitment.rs  document_verifier.rs  fri.rs  mod.rs  privacy_preserving_prover.rs
src/resilience/: circuit_breaker.rs  mod.rs  retry.rs
src/serialization/: mod.rs
src/utils/: mod.rs
src/validation/: mod.rs  public_inputs.rs
tests/: blake3_lookup_tables.rs  ci_test_suite.rs  comprehensive_parser_test.rs  comprehensive_test_suite.rs  constraint41_test.rs  constraint_count_test.rs  critical_vulnerability_test.rs  debug_parsing.rs  det_logs_pass_fail.rs  det_real_proof_test.rs  det_verification_test.rs  eddsa_ext_props.rs  eddsa_helpers.rs  eddsa_test.rs  eddsa_test_data.rs  fixed_identity_extraction_test.rs  fri_soundness_test.rs  full_proof_test.rs  grovevm_real_proof_test.rs  grovevm_test.rs  hybrid_verification_test.rs  identity_binding_enforcement_test.rs  identity_binding_valid_test.rs  identity_security_test.rs  identity_validation_test.rs  init_rayon.rs  integration_test.rs  logs_pass_fail_test.rs  minimal_proof_test.rs  negative_test.rs  parallel_test.rs  pass_fail_fixtures.rs  phase1_phase2_test.rs  phase_isolation_test.rs  production_test.rs  proof_parsing_test.rs  prop_ed25519_invariants.rs  quick_constraint_14_test.rs  real_crypto_test.rs  real_sdk_proofs_test.rs  (+29 more)
tests/fixtures/: PASS_AND_FAIL.json  proof_metadata_B5XLy3cUDayaqZmcGaWb98PEAUguGHiHSU5DxiKrHBj3.json
